@@ -300,6 +300,7 @@ Makefile
 src/Makefile
 src/pam_krb5.5
 src/pam_krb5.8
+src/pam_krb5_storetmp.8
 tests/Makefile
 tests/config/Makefile
 tests/config/krb5.conf
