@@ -1,0 +1,46 @@
+.TH pam_krb5_storetmp 8 2005/10/05 "Red Hat Linux" "System Administrator's Manual"
+
+.SH NAME
+pam_krb5_storetmp \- Temporary file helper
+
+.SH SYNOPSIS
+.B pam_krb5_storetmp pattern [uid] [gid]
+
+.SH DESCRIPTION
+The pam_krb5.so module uses pam_krb5_storetmp to create and remove temporary
+files.  It is not intended for any other use.
+
+.SH ARGUMENTS
+.IP pattern
+A filename pattern of the form \fI/tmp/fooXXXXXX\fR.  A temporary file will
+be created using mkstemp(3) and any data provided to standard input will be
+piped to the file.  Upon reading an end-of-file, the helper will print the
+name of the created file.
+.br
+If the pattern does not end with the distinctive patterh \fIXXXXXX\fR, then
+the file is simply deleted.
+
+.IP uid
+An optional numeric UID which the helper will attempt to switch to before
+creating the file.  The helper continues in its task if the attempt fails.
+
+.IP gid
+An optional numeric GID which the helper will attempt to switch to before
+creating the file.  The helper continues in its task if the attempt fails.
+
+.SH FILES
+\fI@SECURITYDIR@/pam_krb5.so\fR
+.br
+
+.SH "SEE ALSO"
+.BR mkstemp (3)
+.BR pam_krb5 (5)
+.BR pam_krb5 (8)
+.br
+
+.SH BUGS
+Probably, but let's hope not.  If you find any, please file them in the
+bug database at http://bugzilla.redhat.com/ against the "pam_krb5" component.
+
+.SH AUTHOR
+Nalin Dahyabhai <nalin@redhat.com>
